# memory-conversation

./: .gitignore  .~lock.conversation.csv#  app.py  main.py  pyproject.toml  requirements.txt  test.py
data/Nandan/: memory_Nandan.arrow
pkg/: gpt4v.py  image_upload_display.py  lang_graph.py  logger.py  memory_kg.py  profile.py
