[tool.poetry]
name = "memory-conversation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
streamlit = ">=1.50.0,<2.0.0"
openai = ">=2.3.0,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
langchain = ">=0.3.27,<0.4.0"
chromadb = ">=1.1.1,<2.0.0"
networkx = ">=3.5,<4.0"
langchain-community = "<0.3.31"
facenet-pytorch = "==2.5.3"
pyvis = ">=0.3.2,<0.4.0"
python-dotenv = ">=1.1.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.37"