[tool.poetry]
name = "memory-conversation"
version = "0.1.0"
description = "Streamlit memory conversation app"
authors = ["Nandan Chebbi <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
streamlit = "^1.50.0"
python-dotenv = "^1.1.1"
openai = "^2.3.0"
pandas = "^2.3.3"
langchain = "^0.3.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"